[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ares-ai"
version = "0.5.6"
description = """ 
ARES is an advanced evaluation framework for Retrieval-Augmented Generation (RAG) systems, 
utilizing fine-tuned classifiers and synthetic data to assess performance efficiently. It streamlines 
the evaluation of context relevance, answer faithfulness, and answer relevance with minimal human annotations.
"""
readme = "README.md"
authors = [
    { name = "Jon Saad-Falcon", email = "jonsaadfalcon@stanford.edu" },
    { name = "Robby Manihani", email = "manihani@stanford.edu"},
    { name = "Omar Khattab", email = "okhattab@stanford.edu"},
    { name = "Christopher Potts", email = "cgpotts@stanford.edu"},
    { name = "Matei Zaharia", email = "matei@berkeley.edu"}
]
license = { file="LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
keywords = ["RAG", "RAG Scoring", "RAG Systems", "Automated Evaluation Framework", "Retrieval-Augmented Generation Systems",
"LLM Judges", "Natural Language Processing", "Machine Learning", "RAG Evaluation", "Context Relevance", "Answer Faithfulness",
"Answer Relevance", "Synthetic Queries", "Synthetic Answers", "In-Domain Passages", "Key Performance Metrics", "Human Preference Validation Set"]

dependencies = [
    "accelerate >=0.21.0, <1.0.0",
    "anthropic == 0.23.1",
    "Cython >=0.29.35",
    "datasets >=2.12.0",
    "fastapi == 0.110.2",
    "faiss-cpu >= 1.8.0", 
    "ipywidgets >=8.0.6, <9.0.0",
    "ipython >=8.12.2, <9.0.0",
    "ipykernel >=6.23.1, <7.0.0",
    "joblib >=1.2.0, <2.0.0",
    "matplotlib >=3.7.1, <4.0.0",
    "matplotlib-inline >=0.1.6, <0.2.0",
    "nltk >=3.8.1, <4.0.0",
    "numexpr >=2.8.4, <3.0.0",
    "numpy >=1.20.0, <2.0.0",
    "openai ==1.14.2",
    "pandas >= 2.0.1",
    "python-dateutil >=2.8.2,<3.0.0",
    "pytorch-ranger >=0.1.1,<0.2.0",
    "pytz >=2023.3,<2024.0",
    "PyYAML >=6.0,<7.0",
    "requests >=2.25.1, <3.0.0",
    "scikit-learn >=1.2.2,<1.3.0",
    "scipy >=1.10.1,<1.11.0",
    "sentencepiece==0.1.99",
    "sentence-transformers >=2.2.2,<3.0.0",
    "spacy >=3.5.3,<4.0.0",
    "torch >= 2.2.1",
    "together >= 1.1.0",
    "tokenizers >=0.13.3",
    "transformers == 4.40.1",
    "vllm == 0.4.1",
]

[project.urls]
documentation = "https://github.com/stanford-futuredata/ARES/tree/new-dev/docs"
repository = "https://github.com/stanford-futuredata/ARES/tree/main"
changelog = "https://github.com/stanford-futuredata/ARES/blob/new-dev/CHANGELOG.md"

[project.scripts]
ares-cli = "ares.cli:main"
